Clean up a bit, add links

--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -65,7 +65,7 @@ Tests can protect your users from bugs that can:
 - Stop them completely with an error
 - Lose their trust in you
 
-You can write your simple [first test](setup.mdx#first-test) right away if you want. Wait to write more complex tests till your code is more stable. "More stable" means that the question variables for the section you are testing are staying the same.
+You can write your simple [first test](setup.mdx#first-test) right away if you want. Wait to write more complex tests till your code is more stable. "More stable" means that the variables for the section you are testing are mostly staying the same.
 
 When you add a new required field or change the variable name or values of a user's field, you will need to update those tests.
 
@@ -94,7 +94,7 @@ For security, [ALKiln freezes the versions of its third-party libraries](#alkiln
 - [GitHub setup interview](https://github.com/SuffolkLITLab/docassemble-ALKilnSetup) helps you install GitHub tests on your repository
 - [ALKilnInThePlayground](https://github.com/SuffolkLITLab/docassemble-ALKilnInThePlayground) lets you run tests from your docassemble server <!-- '...lets you run <AutoDIY/> tests from... ' -->
 - [The Story Table test generator](https://github.com/plocket/alkiln_story) uses an interview's JSON variables to create a file containing a Story Table test
-- [This documentation](https://github.com/SuffolkLITLab/docassemble-AssemblyLine-documentation/tree/main/docs/alkiln)
+- [This documentation's repository](https://github.com/SuffolkLITLab/docassemble-AssemblyLine-documentation/tree/main/docs/alkiln) is on GitHub too
 
 
 ## How can you contribute? {#contribute}
@@ -104,7 +104,7 @@ For security, [ALKiln freezes the versions of its third-party libraries](#alkiln
 - Give us feedback and suggestions by [creating issues for ALKiln](https://github.com/SuffolkLITLab/ALKiln/issues)
 - Improve this documentation on GitHub (see the link at the bottom of the page)
 - Join and participate in the [docassemble community](https://docassemble.org/docs/support.html#slack)
-- Contact us on the docassemble Slack and become a collaborator
+- Contact us on the [docassemble Slack](https://docassemble.org/docs/support.html#slack) and become a collaborator
 
 
 ## ALKiln docs collaborators {#doc-collaborators}
@@ -113,7 +113,7 @@ Both humans and LLMs have contributed to this documentation.
 
 Regarding the former, we asked for feedback, ideas, and technical audits from staff at SuffolkLITLab, [Recurse Center](https://www.recurse.com/) collaborators, friends, family, and of course you, our users.
 
-As for the latter, we sometimes used the free version of [phind](https://www.phind.com) to offer better (and often worse) suggestions for re-wording and phrasing.
+As for the latter, we sometimes used the free version of [phind](https://www.phind.com) to offer sometimes better (and often worse) suggestions for re-wording and phrasing.
 
 
 [^basic]: More complex packages might have trouble using ALKiln. There are some interview features ALKiln cannot yet handle. For example, [`object_multiselect` fields](https://docassemble.org/docs/fields.html#object_multiselect). ALKiln also may not understand custom validation code or complex [`CustomDatatype`](https://docassemble.org/docs/fields.html#custom%20datatype) fields if you make them. If you run into problems, [file a clear and descriptive issue on our repository](https://github.com/SuffolkLITLab/ALKiln/issues) and we will see if we can help.
